[package]
name = "defi-trust-fund"
version = "0.1.0"
description = "DeFi Trust Fund - Self-Perpetuating Proof of Loyalty and Liquidity Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "defi_trust_fund"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
spl-token = "4.0.0"
spl-token-metadata = "3.2.0"
spl-associated-token-account = "2.2.0"
pyth-solana-receiver-sdk = "0.3.0"

# Jupiter Swap API (placeholder - needs actual implementation)
jupiter-swap-api = { git = "https://github.com/jup-ag/jupiter-core", features = ["no-entrypoint"] }

# Kamino SDK (placeholder - needs actual implementation)  
kamino = { git = "https://github.com/kamino-finance/kamino-sdk", features = ["no-entrypoint"] }

# Pyth Oracle (placeholder - needs actual implementation)
pyth = { git = "https://github.com/pyth-network/pyth-solana-receiver", features = ["no-entrypoint"] }

