[package]
name = "defi-trust-fund"
version = "0.1.0"
edition = "2021"
description = "DeFi Trust Fund - Self-Perpetuating Proof of Loyalty and Liquidity Protocol"
authors = ["DeFi Trust Fund Team"]
license = "MIT"
repository = "https://github.com/your-org/defi-trust-fund"
keywords = ["solana", "anchor", "defi", "staking", "liquidity", "yield-farming"]
categories = ["blockchain", "cryptography"]

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.16.0"
mpl-token-metadata = "3.2.0"

[dev-dependencies]
anchor-client = "0.29.0"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
overflow-checks = true
